--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Ropa+Sans:ital@0;1&display=swap");
 
 body {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
     margin: 0;
     padding: 0;
     background-color: var(--tertiaryColor);
@@ -69,10 +72,12 @@ header {
 }
 
 main {
+    flex-grow: 1;
+    height: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     padding: 1em;
 }
@@ -129,8 +134,10 @@ main {
 
 #game {
     display: flex;
+    flex-grow: 1;
+    height: 100%;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 
     & #hints-title {
@@ -146,7 +153,8 @@ main {
     }
 
     & #hints-board {
-        max-height: 300px;
+        flex-grow: 1;
+        height: 100%;
         overflow-y: scroll;
         display: flex;
         flex-direction: row;
