--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
     --primaryColor: #5b42f5;
-    --primaryColor: #f5b76f;
+    --primaryColor: #6ff5c8;
     --secondaryColor: #f9fcf9;
     --tertiaryColor: #f5f5f5;
     --quaternaryColor: #929292;
