--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
 :root {
-    --primaryColor: #f56ff5;
     --primaryColor: #5b42f5;
+    --primaryColor: #6ff5ea;
     --secondaryColor: #f9fcf9;
     --tertiaryColor: #f5f5f5;
     --quaternaryColor: #929292;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Ropa+Sans:ital@0;1&display=swap");
+
+html,
+body {
+    scroll-behavior: smooth;
+}
 
 body {
     position: fixed;
