--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     --secondaryColor: #f9fcf9;
     --tertiaryColor: #f5f5f5;
     --quaternaryColor: #929292;
+    --accentColor: #ffd000;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Ropa+Sans:ital@0;1&display=swap");
@@ -11,6 +12,15 @@
 html,
 body {
     scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+    width: 0.5em;
+    background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #000000;
 }
 
 body {
@@ -243,5 +253,25 @@ form {
                 color: var(--primaryColor);
             }
         }
+    }
+}
+
+.reveal {
+    color: var(--secondaryColor);
+    width: 100%;
+    text-align: center;
+    /* animated gradient purple to orange */
+    background: linear-gradient(90deg, var(--primaryColor), var(--accentColor));
+    background-size: 200% 200%;
+    animation: gradient 1.5s linear infinite;
+    animation-direction: alternate;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    100% {
+        background-position: 100% 50%;
     }
 }
