--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ header {
 }
 
 main {
+    padding: 0;
     flex-grow: 1;
     height: 100%;
     position: relative;
@@ -106,6 +107,17 @@ main {
     right: 0;
     color: black;
     padding: 8px;
+}
+
+#answer-banner {
+    height: 50px;
+    display: flex;
+    padding: 0;
+    margin: 20px 0 0 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #burger-menu {
@@ -270,8 +282,11 @@ form {
 @keyframes gradient {
     0% {
         background-position: 0% 50%;
+        font-size: 2em;
+
     }
     100% {
         background-position: 100% 50%;
+        font-size: 1.2em;
     }
 }
