--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 :root {
-    --primaryColor: #f02c2c;
-    --primaryColor: #5b42f5;
+    --primaryColor: #4e31f0;
     --secondaryColor: #f9fcf9;
     --tertiaryColor: #f5f5f5;
     --quaternaryColor: #929292;
