--- a/style.css
+++ b/style.css
@@ -3,11 +3,18 @@
     --secondaryColor: #f9fcf9;
     --tertiaryColor: #f5f5f5;
     --quaternaryColor: #929292;
-    --accentColor: #ffd000;
+    --accentColor: #ffcc6d;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Ropa+Sans:ital@0;1&display=swap");
-
+@font-face {
+    font-family: "Ropa Sans";
+    src: url("fonts/RopaSansMedium.otf") format("opentype");
+}
+@font-face {
+    font-family: "Ropa Sans Light";
+    src: url("fonts/RopaSansLight.otf") format("opentype");
+}
 html,
 body {
     scroll-behavior: smooth;
@@ -44,9 +51,9 @@ header {
     height: 40px;
     color: var(--secondaryColor);
     text-align: center;
-    & h1 {
+    & #main-title {
         font-size: 1.7em;
-        font-family: "Ropa Sans", serif;
+        font-family: "Ropa Sans Light", serif;
     }
     & #burger-button {
         position: absolute;
@@ -109,6 +116,7 @@ main {
 }
 
 #answer-banner {
+    font-family: "Ropa Sans Light", serif;
     height: 30px;
     display: flex;
     padding: 0;
@@ -285,12 +293,14 @@ form {
 @keyframes gradient {
     0% {
         background-position: 0% 50%;
+        letter-spacing: 0.6em;
         font-size: 2em;
-        text-shadow: #66625d 6px 6px 2px;
+        text-shadow: #ce6e15 6px 6px 3px;
     }
     100% {
         background-position: 100% 50%;
+        letter-spacing: 0.1em;
         font-size: 1.2em;
-        text-shadow: #66625d 3px 3px 0px;
+        text-shadow: #5c2b04 2px 2px 0px;
     }
 }
